--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -902,6 +902,7 @@ commands:
         name: Clone Cassandra dtest Repository (via git)
         command: |
           git clone --single-branch --branch $DTEST_BRANCH --depth 1 $DTEST_REPO ~/cassandra-dtest
+          sed -i 's;https://github.com/riptano/ccm.git@cassandra-test;git://github.com/riptano/ccm.git@cassandra-test;g' ~/cassandra-dtest/requirements.txt
 
   build_cassandra:
     steps:
