--- a/test/conf/cassandra-sslcontextfactory.yaml
+++ b/test/conf/cassandra-sslcontextfactory.yaml
@@ -49,12 +49,13 @@ seed_provider:
           - seeds: "127.0.0.1:7012"
 endpoint_snitch: org.apache.cassandra.locator.SimpleSnitch
 dynamic_snitch: true
-ssl_context_factory:
-    class_name: org.apache.cassandra.security.CustomSslContextFactoryImplForTest
-    parameters:
-        key1: "value1"
-        key2: "value2"
-        key3: "value3"
+client_encryption_options:
+    ssl_context_factory:
+        class_name: org.apache.cassandra.security.CustomSslContextFactoryImplForTest
+        parameters:
+            key1: "value1"
+            key2: "value2"
+            key3: "value3"
 server_encryption_options:
     internode_encryption: none
     keystore: conf/.keystore
