--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -34,6 +34,7 @@ default_env_vars: &default_env_vars
     DTEST_BRANCH: trunk
     CCM_MAX_HEAP_SIZE: 1024M
     CCM_HEAP_NEWSIZE: 256M
+
     # The Ant test target to run, for example:
     # REPEATED_UTEST_TARGET: testsome
     # REPEATED_UTEST_TARGET: test-jvm-dtest-some
@@ -54,6 +55,7 @@ default_env_vars: &default_env_vars
     REPEATED_UTEST_COUNT: 100
     # Whether the test iteration should stop on the first failure
     REPEATED_UTEST_STOP_ON_FAILURE: false
+
     # A Python dtest to be run multiple times, for example:
     # REPEATED_DTEST_NAME: cqlsh_tests/test_cqlsh.py
     # REPEATED_DTEST_NAME: cqlsh_tests/test_cqlsh.py::TestCqlshSmoke
@@ -65,6 +67,27 @@ default_env_vars: &default_env_vars
     REPEATED_DTEST_COUNT: 100
     # Whether the test iteration should stop on the first failure
     REPEATED_DTEST_STOP_ON_FAILURE: false
+
+    # A Python upgrade dtest to be run multiple times, for example:
+    # REPEATED_UPGRADE_DTEST_NAME: upgrade_tests/cql_tests.py
+    # REPEATED_UPGRADE_DTEST_NAME: upgrade_tests/cql_tests.py::TestCQLNodes2RF1_Upgrade_current_4_0_x_To_indev_4_0_x
+    REPEATED_UPGRADE_DTEST_NAME:
+    # The number of times that the repeated Python upgrade dtest should be run
+    REPEATED_UPGRADE_DTEST_COUNT: 100
+    # Whether the test iteration should stop on the first failure
+    REPEATED_UPGRADE_DTEST_STOP_ON_FAILURE: false
+
+    # The name of JVM upgrade dtest class to be run multiple times, for example:
+    # REPEATED_JVM_UPGRADE_DTEST_CLASS: org.apache.cassandra.distributed.upgrade.MixedModeAvailabilityV30Test
+    REPEATED_JVM_UPGRADE_DTEST_CLASS:
+    # The optional specific methods within REPEATED_JVM_UPGRADE_DTEST_CLASS to be run, for example:
+    # REPEATED_JVM_UPGRADE_DTEST_METHODS: testAvailabilityV30ToV3X
+    # REPEATED_JVM_UPGRADE_DTEST_METHODS: testAvailabilityV30ToV3X,testAvailabilityV30ToV4
+    REPEATED_JVM_UPGRADE_DTEST_METHODS:
+    # The number of times that the repeated JVM upgrade dtest should be run
+    REPEATED_JVM_UPGRADE_DTEST_COUNT: 100
+    # Whether the JVM upgrade dtest iteration should stop on the first failure
+    REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
 
 j8_par_executor: &j8_par_executor
   executor:
@@ -115,14 +138,17 @@ with_dtests_jobs: &with_dtest_jobs
             - utests_compression:
                 requires:
                   - start_utests_compression
-            - start_jvm_upgrade_dtest:
+            - start_j8_dtest_jars_build:
                 type: approval
             - j8_dtest_jars_build:
                 requires:
                   - build
-                  - start_jvm_upgrade_dtest
+                  - start_j8_dtest_jars_build
+            - start_jvm_upgrade_dtest:
+                type: approval
             - j8_jvm_upgrade_dtests:
                 requires:
+                  - start_jvm_upgrade_dtest
                   - j8_dtest_jars_build
             # Java 8 dtests (on request)
             - start_j8_dtests:
@@ -144,19 +170,33 @@ with_dtests_jobs: &with_dtest_jobs
                 requires:
                   - start_upgrade_tests
             # Java 8 repeated utest (on request)
-            - start_j8_repeated-utest:
+            - start_j8_repeated_utest:
                 type: approval
-            - j8_repeated-utest:
+            - j8_repeated_utest:
                 requires:
-                  - start_j8_repeated-utest
+                  - start_j8_repeated_utest
                   - build
             # Java 8 repeated dtest (on request)
-            - start_j8_repeated-dtest:
+            - start_j8_repeated_dtest:
                 type: approval
-            - j8_repeated-dtest:
+            - j8_repeated_dtest:
                 requires:
-                  - start_j8_repeated-dtest
+                  - start_j8_repeated_dtest
                   - build
+            # Repeated Python upgrade dtest (on request)
+            - start_repeated_upgrade_dtest:
+                type: approval
+            - repeated_upgrade_dtest:
+                requires:
+                  - start_repeated_upgrade_dtest
+                  - build
+            # Repeated JVM upgrade dtest (on request)
+            - start_repeated_jvm_upgrade_dtest:
+                type: approval
+            - repeated_jvm_upgrade_dtest:
+                requires:
+                  - start_repeated_jvm_upgrade_dtest
+                  - j8_dtest_jars_build
 
 with_dtest_jobs_only: &with_dtest_jobs_only
         jobs:
@@ -312,22 +352,59 @@ jobs:
           extra_env_args: 'RUN_STATIC_UPGRADE_MATRIX=true'
           pytest_extra_args: '--execute-upgrade-tests'
 
-  j8_repeated-utest:
+  j8_repeated_utest:
     <<: *j8_par_executor
     steps:
       - attach_workspace:
           at: /home/cassandra
       - log_environment
-      - run_repeated_utest
+      - run_repeated_utest:
+          target: ${REPEATED_UTEST_TARGET}
+          class: ${REPEATED_UTEST_CLASS}
+          methods: ${REPEATED_UTEST_METHODS}
+          count: ${REPEATED_UTEST_COUNT}
+          stop_on_failure: ${REPEATED_UTEST_STOP_ON_FAILURE}
 
-  j8_repeated-dtest:
+  j8_repeated_dtest:
     <<: *j8_par_executor
     steps:
       - attach_workspace:
           at: /home/cassandra
       - clone_dtest
       - create_venv
-      - run_repeated_dtest
+      - run_repeated_dtest:
+          tests: ${REPEATED_DTEST_NAME}
+          vnodes: ${REPEATED_DTEST_VNODES}
+          upgrade: "false"
+          count: ${REPEATED_DTEST_COUNT}
+          stop_on_failure: ${REPEATED_DTEST_STOP_ON_FAILURE}
+
+  repeated_jvm_upgrade_dtest:
+    <<: *j8_par_executor
+    steps:
+      - attach_workspace:
+          at: /home/cassandra
+      - log_environment
+      - run_repeated_utest:
+          target: test-jvm-dtest-some
+          class: ${REPEATED_JVM_UPGRADE_DTEST_CLASS}
+          methods: ${REPEATED_JVM_UPGRADE_DTEST_METHODS}
+          count: ${REPEATED_JVM_UPGRADE_DTEST_COUNT}
+          stop_on_failure: ${REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE}
+
+  repeated_upgrade_dtest:
+    <<: *j8_par_executor
+    steps:
+      - attach_workspace:
+          at: /home/cassandra
+      - clone_dtest
+      - create_venv
+      - run_repeated_dtest:
+          tests: ${REPEATED_UPGRADE_DTEST_NAME}
+          vnodes: "false"
+          upgrade: "true"
+          stop_on_failure: ${REPEATED_UPGRADE_DTEST_STOP_ON_FAILURE}
+          count: ${REPEATED_UPGRADE_DTEST_COUNT}
 
 commands:
   log_environment:
@@ -648,30 +725,41 @@ commands:
           destination: dtest_<<parameters.file_tag>>_logs
 
   run_repeated_utest:
+    parameters:
+      target:
+        type: string
+      class:
+        type: string
+      methods:
+        type: string
+      count:
+        type: string
+      stop_on_failure:
+        type: string
     steps:
       - run:
-          name: Run repeated utest
+          name: Run repeated JUnit test
           no_output_timeout: 15m
           command: |
-            if [ "$REPEATED_UTEST_CLASS" == "<nil>" ]; then
+            if [ "<<parameters.class>>" == "<nil>" ]; then
               echo "Repeated utest class name hasn't been defined, exiting without running any test"
-            elif [ "$REPEATED_UTEST_COUNT" == "<nil>" ]; then
+            elif [ "<<parameters.count>>" == "<nil>" ]; then
               echo "Repeated utest count hasn't been defined, exiting without running any test"
-            elif [ "$REPEATED_UTEST_COUNT" -le 0 ]; then
+            elif [ "<<parameters.count>>" -le 0 ]; then
               echo "Repeated utest count is lesser or equals than zero, exiting without running any test"
             else
 
               # Calculate the number of test iterations to be run by the current parallel runner.
               # Since we are running the same test multiple times there is no need to use `circleci tests split`.
-              count=$((REPEATED_UTEST_COUNT / CIRCLE_NODE_TOTAL))
-              if (($CIRCLE_NODE_INDEX < (REPEATED_UTEST_COUNT % CIRCLE_NODE_TOTAL))); then
+              count=$((<<parameters.count>> / CIRCLE_NODE_TOTAL))
+              if (($CIRCLE_NODE_INDEX < (<<parameters.count>> % CIRCLE_NODE_TOTAL))); then
                 count=$((count+1))
               fi
 
               if (($count <= 0)); then
                 echo "No tests to run in this runner"
               else
-                echo "Running $REPEATED_UTEST_TARGET $REPEATED_UTEST_CLASS $REPEATED_UTEST_METHODS $count times"
+                echo "Running <<parameters.target>> <<parameters.class>> <<parameters.methods>> <<parameters.count>> times"
 
                 set -x
                 export PATH=$JAVA_HOME/bin:$PATH
@@ -681,8 +769,8 @@ commands:
                   cp ~/dtest_jars/dtest* /tmp/cassandra/build/
                 fi
 
-                target=$REPEATED_UTEST_TARGET
-                class_path=$REPEATED_UTEST_CLASS
+                target=<<parameters.target>>
+                class_path=<<parameters.class>>
                 class_name="${class_path##*.}"
 
                 # Prepare the -Dtest.name argument.
@@ -697,14 +785,14 @@ commands:
                 fi
 
                 # Prepare the -Dtest.methods argument, which is optional
-                if [ "$REPEATED_UTEST_METHODS" == "<nil>" ]; then
+                if [ "<<parameters.methods>>" == "<nil>" ]; then
                   methods=""
                 else
-                  methods="-Dtest.methods=$REPEATED_UTEST_METHODS"
+                  methods="-Dtest.methods=<<parameters.methods>>"
                 fi
 
                 # Run the test target as many times as requested collecting the exit code,
-                # stopping the iteration only if REPEATED_UTEST_STOP_ON_FAILURE is set.
+                # stopping the iteration only if stop_on_failure is set.
                 exit_code="$?"
                 for i in $(seq -w 1 $count); do
 
@@ -720,7 +808,7 @@ commands:
                   # move the stdout output file
                   dest=/tmp/results/repeated_utest/stdout/${status}/${i}
                   mkdir -p $dest
-                  mv stdout.txt $dest/${REPEATED_UTEST_TARGET}-${REPEATED_UTEST_CLASS}.txt
+                  mv stdout.txt $dest/<<parameters.target>>-<<parameters.class>>.txt
 
                   # move the XML output files
                   source=build/test/output
@@ -739,7 +827,7 @@ commands:
                   fi
 
                   # maybe stop iterations on test failure
-                  if [[ $REPEATED_UTEST_STOP_ON_FAILURE = true ]] && (( $exit_code > 0 )); then
+                  if [[ <<parameters.stop_on_failure>> = true ]] && (( $exit_code > 0 )); then
                     break
                   fi
                 done
@@ -760,30 +848,41 @@ commands:
           destination: logs
 
   run_repeated_dtest:
+    parameters:
+      tests:
+        type: string
+      vnodes:
+        type: string
+      upgrade:
+        type: string
+      count:
+        type: string
+      stop_on_failure:
+        type: string
     steps:
       - run:
-          name: Run repeated dtest
+          name: Run repeated Python dtest
           no_output_timeout: 15m
           command: |
-            if [ "$REPEATED_DTEST_NAME" == "<nil>" ]; then
+            if [ "<<parameters.tests>>" == "<nil>" ]; then
               echo "Repeated dtest name hasn't been defined, exiting without running any test"
-            elif [ "$REPEATED_DTEST_COUNT" == "<nil>" ]; then
+            elif [ "<<parameters.count>>" == "<nil>" ]; then
               echo "Repeated dtest count hasn't been defined, exiting without running any test"
-            elif [ "$REPEATED_DTEST_COUNT" -le 0 ]; then
+            elif [ "<<parameters.count>>" -le 0 ]; then
               echo "Repeated dtest count is lesser or equals than zero, exiting without running any test"
             else
 
               # Calculate the number of test iterations to be run by the current parallel runner.
               # Since we are running the same test multiple times there is no need to use `circleci tests split`.
-              count=$((REPEATED_DTEST_COUNT / CIRCLE_NODE_TOTAL))
-              if (($CIRCLE_NODE_INDEX < (REPEATED_DTEST_COUNT % CIRCLE_NODE_TOTAL))); then
+              count=$((<<parameters.count>> / CIRCLE_NODE_TOTAL))
+              if (($CIRCLE_NODE_INDEX < (<<parameters.count>> % CIRCLE_NODE_TOTAL))); then
                 count=$((count+1))
               fi
 
               if (($count <= 0)); then
                 echo "No tests to run in this runner"
               else
-                echo "Running $REPEATED_DTEST_NAME $count times"
+                echo "Running <<parameters.tests>> $count times"
 
                 source ~/env3.6/bin/activate
                 export PATH=$JAVA_HOME/bin:$PATH
@@ -797,17 +896,22 @@ commands:
                 mkdir -p /tmp/results/dtests
 
                 stop_on_failure_arg=""
-                if $REPEATED_UTEST_STOP_ON_FAILURE; then
+                if <<parameters.stop_on_failure>>; then
                   stop_on_failure_arg="-x"
                 fi
 
                 vnodes_args=""
-                if $REPEATED_DTEST_VNODES; then
+                if <<parameters.vnodes>>; then
                   vnodes_args="--use-vnodes --num-tokens=16"
                 fi
 
+                upgrade_arg=""
+                if <<parameters.upgrade>>; then
+                  upgrade_arg="--execute-upgrade-tests"
+                fi
+
                 # we need the "set -o pipefail" here so that the exit code that circleci will actually use is from pytest and not the exit code from tee
-                set -o pipefail && cd ~/cassandra-dtest && pytest $vnodes_args --count=$count $stop_on_failure_arg --log-cli-level=DEBUG --junit-xml=/tmp/results/dtests/pytest_result.xml -s --cassandra-dir=/home/cassandra/cassandra --keep-test-dir $REPEATED_DTEST_NAME | tee /tmp/dtest/stdout.txt
+                set -o pipefail && cd ~/cassandra-dtest && pytest $vnodes_args --count=$count $stop_on_failure_arg $upgrade_arg --log-cli-level=DEBUG --junit-xml=/tmp/results/dtests/pytest_result.xml -s --cassandra-dir=/home/cassandra/cassandra --keep-test-dir <<parameters.tests>> | tee /tmp/dtest/stdout.txt
               fi
             fi
       - store_test_results:
