Add flag to disable 'ALTER ... DROP COMPACT STORAGE' statements

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1434,3 +1434,7 @@ enable_sasi_indexes: false
 # Enables creation of transiently replicated keyspaces on this node.
 # Transient replication is experimental and is not recommended for production use.
 enable_transient_replication: false
+
+# Enables the used of 'ALTER ... DROP COMPACT STORAGE' statements on this node.
+# 'ALTER ... DROP COMPACT STORAGE' is considered experimental and is not recommended for production use.
+enable_drop_compact_storage: false
